Updated references and project structure

--- a/Src/Tests/VatTools.Tests.csproj
+++ b/Src/Tests/VatTools.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VatValidate.Core\VatTools.csproj" />
+    <ProjectReference Include="..\VatTools\VatTools.csproj" />
   </ItemGroup>
 
 </Project>
