--- a/Src/Example/VatTools.Examples.csproj
+++ b/Src/Example/VatTools.Examples.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VatValidate.Core\VatTools.csproj" />
+    <ProjectReference Include="..\VatTools\VatTools.csproj" />
   </ItemGroup>
 
 </Project>
